--- a/src/index.css
+++ b/src/index.css
@@ -39,19 +39,26 @@ body{
 }
 
 .hero-subtitle{
-    font-size: clamp(20px, 5vw, 2em);
+    font-size: clamp(20px, 5vw, 1.8em);
     padding: 0 30px;
-    color: #0054B5;
+    font-weight: 100;
     margin-bottom: 30px;
+    color: #2997FF;
 }
 
 .hero-button{
     font-size: clamp(20px, 3.5vw, 1.8em);
     padding: 10px;
-    border: 3px solid white;
-    border-radius: 5px;
     color: white;
     text-decoration: none;
+    border: 2px solid white;
+    border-radius: 5px;
+}
+
+.hero-button:hover{
+    text-shadow: 0 0 5px white;
+    background: rgba(35, 33, 35, 0.6);
+    box-shadow: 0 0 10px white;
 }
 
 .instructions-wrap{
@@ -66,7 +73,7 @@ body{
     font-size: 1.5em;
     margin: 10px;
     width: 80%;
-    color: #0054B5;
+    color: #2997FF;
     text-align: center;
 }
 
@@ -102,7 +109,7 @@ body{
 
 .results-wrap{
     width: 90%;
-    min-height: 35vh;
+    min-height: 30vh;
     margin: 20px auto;
     display: flex;
     flex-direction: column;
@@ -112,13 +119,25 @@ body{
     width: 45%;
     font-size: 1.2em;
     text-align: center;
-    background-color:#0054B5;;
-    color: whitesmoke;
+    background: none;
+    color: #2997FF;
     padding: 5px;
     margin: 20px auto;
     border-radius: 5px;
-    border: 1px solid grey;
+    border: 3px solid #2997FF;
     grid-column: 1/-1;
+}
+
+.result-button:hover{
+    text-shadow: 0 0 10px #2997FF;
+    background: rgba(35, 33, 35, 0.6);
+    box-shadow: 0 0 15px #2997FF;
+}
+
+.result-from-state{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .result-header{
@@ -135,7 +154,7 @@ body{
 }
 
 .match-company{
-    color: #36AAFE;
+    color: #2997FF;;
     font-weight: bold;
     padding: 5px 0;
 }
